// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pill > should fire remove event on Backspace 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <rk-icon
      aria-label="action-close"
      class="disabled"
      role="button"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="action-close"
      />
    </rk-icon>
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should fire remove event on Backspace 2`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <rk-icon
      aria-label="action-close"
      class=""
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="action-close"
      />
    </rk-icon>
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should fire remove event on Delete 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <rk-icon
      aria-label="action-close"
      class="disabled"
      role="button"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="action-close"
      />
    </rk-icon>
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should fire remove event on Delete 2`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <rk-icon
      aria-label="action-close"
      class=""
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="action-close"
      />
    </rk-icon>
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should fire remove event on click 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <rk-icon
      aria-label="action-close"
      class="disabled"
      role="button"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="action-close"
      />
    </rk-icon>
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should fire remove event on click 2`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <rk-icon
      aria-label="action-close"
      class=""
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="action-close"
      />
    </rk-icon>
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render 2`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    
    <!---->
     
    <p>
      World
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render with icon 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <rk-icon
      aria-label="Hello"
      class=""
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="world"
      />
    </rk-icon>
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render with icon 2`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <rk-icon
      aria-label="World"
      class=""
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="hello"
      />
    </rk-icon>
    <!---->
     
    <p>
      World
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render with image 1`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    <img
      alt="Hello"
      src="world.png"
    />
    
    <!---->
     
    <p>
      Hello
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;

exports[`Pill > should render with image 2`] = `
<div>
  <rk-pill
    tabindex="0"
  >
    <!---->
    <!---->
    <img
      alt="World"
      src="hello.png"
    />
    
    <!---->
     
    <p>
      World
    </p>
    <!---->
    <!---->
     
    <!---->
  </rk-pill>
  
</div>
`;
